--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,10 @@
-<h1>Home</h1>
+<app-search></app-search>
 
-<ul *ngIf="users">
-   <li *ngFor="let user of users">
-     <p>{{user.id}}</p>
-     <p>{{user.name}}  {{user.username}}</p>
-   </li>
-</ul>
+<!--<ul *ngIf="movies">-->
+<!--   <li *ngFor="let movie of movies">-->
+<!--&lt;!&ndash;     <img [src]="movie.poster_path">&ndash;&gt;-->
+<!--     <p>{{movie.id}}</p>-->
+<!--     <p>{{movie.title}}</p>-->
+<!--   </li>-->
+<!--</ul>-->
+
