--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,5 +1,5 @@
 header {
-  background: #7700ff;
+  background-image: linear-gradient(to right, #5390d9 ,#7700ff);
   .logo {
     font-weight: bold;
   }
