--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-nav></app-nav>
+<app-theme></app-theme>
 <section>
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 </section>
+
