--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,10 +1,10 @@
 <header>
   <div class="container">
-    <a routerLink="/" class="logo">App title</a>
+    <a routerLink="/" class="logo">Movie App</a>
     <nav>
       <ul>
         <li><a routerLink="/">Home</a></li>
-        <li><a routerLink="/about">About</a></li>
+        <li><a routerLink="/about">Favorite</a></li>
         <li><a routerLink="/contact">Contact us</a></li>
       </ul>
     </nav>
