Movie application with dark mode

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -20,9 +20,9 @@
 </form>
 
 <div *ngIf="submitted" class="results">
-  <strong>Name: </strong>
+  <div><strong>Name: </strong></div>
   <span>{{messegeForm.controls.name.value}}</span>
-  <strong>Message: </strong>
+  <div><strong>Message: </strong></div>
   <span>{{messegeForm.controls.message.value}}</span>
 
 </div>
