--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -32,9 +32,9 @@
       <p>{{ movie.Plot }}</p>
 
       <h3 class="my-3">Ratings</h3>
-      <ul class="list-group">
+      <ul class="list-groups">
         <li
-          class="list-group-item"
+          class="list-groups-item"
           *ngFor="let rating of movie.Ratings">
           {{ rating.Source }} - {{ rating.Value }}
         </li>
