--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,7 +4,7 @@
     <nav>
       <ul>
         <li><a routerLink="/">Home</a></li>
-        <li><a routerLink="/about">Favorite</a></li>
+        <li><a routerLink="/favorite">Favorite</a></li>
         <li><a routerLink="/contact">Contact us</a></li>
       </ul>
     </nav>
