--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -1,5 +1,5 @@
 .cards {
-  width: 350px;
+  width: 500px;
   margin-top: 10px;
   display: flex;
   flex-direction: column;
@@ -9,13 +9,18 @@
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
+.cards:hover {
+  /*box-shadow: 6px 4px 25px 9px rgba(23,90,115,1);*/
+  box-shadow: 6px 4px 14px 9px rgba(61,135,184,1);
+}
+
 .image-wrapper {
   width: 100%;
 }
 
 .image {
   width: 100%;
-  height: 450px;
+  height: 600px;
   margin: 5px auto;
 }
 
@@ -23,3 +28,6 @@
   height: 60px;
 }
 
+.text:hover {
+  color: rgb(193, 128, 6);
+}
